# wiki-most-translated

./: .gitignore  1-fetch-category.py  2-fetch-qids.py  3-fetch-dates.py  3-fetch-metadata.py  4-populate-descs.py  4-select-important.py  pyproject.toml
csv/: most-important-with-descs.csv  most-important.csv  people-100-translations.txt  people-lvl-3.txt  people-lvl-4.txt  people-lvl-5.txt  people-qid-metadata.tsv  people-qid.tsv  qid-descs.tsv
